--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,8 +4,8 @@
 - block:
     - block:
         - name: Retrieve timestamp
-          command:
-            python -c "import datetime; print(datetime.datetime.utcnow().strftime('%Y%m%dT%H%M%S'))"
+          command: >
+            {{ ansible_python_interpreter }} -c "import datetime; print(datetime.datetime.utcnow().strftime('%Y%m%dT%H%M%S'))"
           changed_when: no
           check_mode: no
           register: _timestamp
